<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/header_interface" >
        <PreferenceScreen
            android:icon="@drawable/apollo_settings_themes"
            android:key="@string/key_themes_preferences"
            android:title="@string/themes" >
            <ListPreference
                android:key="@string/key_themes_package"
                android:summary="@string/apollo_themes"
                android:title="@string/select_theme" />

            <com.andrew.apolloMod.preferences.ThemePreview
                android:key="@string/key_themes"
                android:layout="@layout/theme_preview" />
        </PreferenceScreen>
        <MultiSelectListPreference
	        android:dialogTitle="@string/tab_visibility_title"
	        android:key="@string/key_tabs_enabled"
	        android:summary="@string/tab_visibility_summary"        
	        android:title="@string/tab_visibility_title"
	        android:entries="@array/tab_titles"
	        android:entryValues="@array/tab_titles"
	        android:defaultValue="@array/tab_titles"
	        android:capitalize="words"
	        />	        
    </PreferenceCategory>    
    <PreferenceCategory android:title="@string/settings_storage_category" >

        <!-- Delete cache -->
        <Preference
            android:key="delete_cache"
            android:summary="@string/settings_delete_cache_summary"
            android:title="@string/settings_delete_cache_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about" >
        <Preference
            style="?android:preferenceInformationStyle"
            android:enabled="false"
            android:key="@string/key_build_version"
            android:summary="1.0"
            android:title="@string/version" />
    </PreferenceCategory>

</PreferenceScreen>